 - Hooked the page and link menus.
 - Added a image-loading toggle button to the UI.
 - Enabled hiding widgets of the control panel from dillorc2.
 - Added a save-directory preference (save_dir in dillorc2).
 - Fixed page-popup-menu to use the stack's top URL instead of base_url.
 - Added the "static" qualifier where missing.
 - Bound "Copy link location".
 - Bound preliminar find text support.
   Patches: place
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
 - Added an experimental gzip decoder! 
 - Implemented "Load Images" in the page menu and cleaned up html.hh.
 - Added shortcuts: PgDn=Spc PgUp=b Back=BackSpace|, Forw=Shift+Backspace|.
   Patch: place, Jorge Arellano
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano, higuita
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
   Patches: Johannes Hofmann
+- Improved FLTK library detection at configure time.
   Patch: Frank Gevaerts
+- Bound Ctrl-R to reload.
   Patch: Jeremy Henty

 TODO:

 - test no_proxy (set a list in dillorc).

-----------------------------------------------------------------------------


0.8.5-pre-dw-redesign-1 [internal]
- Prototype

dillo-0.8.3-pre-dw-redesign-3 [Aug 30, 2004]
 - * Fixed bug GtkDwViewport, which caused some redraws to be ignored.
   * Added GdkDwPreview.