@@ -59,6 +59,7 @@ dillo-fltk2
  - Added the "static" qualifier where missing.
  - Bound "Copy link location".
  - Bound preliminar find text support.
+ - Added line numbers and enabled wrapping in the "View Source" window.
    Patches: place
 +- Fixed a problem with locally-installed dpis.
  - Added code for optional image loading (nice interface) very advanced!
